syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Ism.Storage.Core.LibraryIndex.V1.Protos";

package storage;

service LibraryIndexStorage {
  rpc AddDmagIndexes (AddDmagIndexesRequest) returns (google.protobuf.Empty);
  rpc AddOrUpdateDmagIndex (AddOrUpdateDmagIndexRequest) returns (google.protobuf.Empty);
  rpc DeleteDmagIndex (DeleteDmagIndexRequest) returns (DeleteDmagIndexResponse);
  rpc GetDmagIndex (GetDmagIndexRequest) returns (GetDmagIndexResponse);
  rpc GetIndex (GetIndexRequest) returns (GetIndexResponse);
  rpc PurgeIndex (google.protobuf.Empty) returns (PurgeIndexResponse);
}

// Type Messages
message DmagIndexMessage {
    string autoEditMode = 1;
    string autoEditStatus = 2;
    repeated ContentItemMessage content = 3;
    google.protobuf.Timestamp created = 4;
    google.protobuf.Timestamp historyDicomSubmitted = 5;
    google.protobuf.Timestamp historySubmitted = 6;
    google.protobuf.Timestamp historyLastAccessed = 7;
    string libraryId = 8;
    string repositoryName = 9;
    repeated NoteMessage notes = 10;
    string patientFirstName = 11;
    string patientLastName = 12;
    string physicianFirstName = 13;
    string physicianLastName = 14;
    string physicianUserId = 15;
    string procedureAccession = 16;
    FixedDateMessage procedureDob = 17;
    string procedureScheduleId = 18;
    SexMessage procedureSex = 19;
    string volumeName = 20;
}

message ContentItemMessage {
    google.protobuf.Timestamp created = 1;
    string description = 2;
    google.protobuf.UInt32Value len = 3;
    string markerType = 4;
    string modality = 5;
    string path = 6;
    string stream = 7;
    string thumbnail = 8;
    string type = 9;
}

message FixedDateMessage {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message NoteMessage {
    string name = 1;
    string value = 2;
}

// Enums
enum SexMessage {
    M = 0;
    F = 1;
    U = 2;
}

// Request Messages
message AddDmagIndexesRequest {
    repeated DmagIndexMessage dmagIndexes = 1;
}

message AddOrUpdateDmagIndexRequest {
    DmagIndexMessage dmagIndex = 1;
}

message DeleteDmagIndexRequest {
    string libraryId = 1;
}

message GetDmagIndexRequest {
    string libraryId = 1;
}

message GetIndexRequest {
    repeated string searchTerms = 1;
    int32 page = 2;
    int32 pageSize = 3;
}

// Response Messages
message DeleteDmagIndexResponse {
    int32 deletedCount = 1;
}

message GetDmagIndexResponse {
    DmagIndexMessage dmagIndex = 1;
}

message GetIndexResponse {
    repeated DmagIndexMessage results = 1;
}

message PurgeIndexResponse {
    int32 deletedCount = 1;
}
